fix tag list alignment

--- a/blog-api/src/public/assets/css/main.css
+++ b/blog-api/src/public/assets/css/main.css
@@ -2883,7 +2883,6 @@ input, select, textarea {
 					font-weight: 500;
 					letter-spacing: 0.16em;
 					line-height: 1;
-					margin: 0 0 0 .5em;
 					padding: 0 0 0 .5em;
 					text-transform: uppercase;
 				}
